--- a/package.json
+++ b/package.json
@@ -15,9 +15,14 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.8",
+    "axios": "^0.27.2",
+    "bcrypt": "^5.0.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.8.1",
     "nodemon": "^2.0.19",
     "ts-node": "^10.9.1"
